--- a/main.css
+++ b/main.css
@@ -34,6 +34,7 @@ body {
 
 #nice {
     font-family: "Lucida Console", cursive;
+    color: gold;
     
 }
 
@@ -50,3 +51,20 @@ body {
     background-color: orangered;
 }
 
+button {
+    background-color: black;
+    color: gold;
+    border-radius: 20px;
+}
+
+button {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: goldenrod;
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+}
